--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "grunt-assemble-toc",
+  "name": "grunt-assemble-toc-custom",
   "description": "Assemble middleware for adding a Table of Contents (TOC) to any HTML page.",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "homepage": "http://assemble.io",
   "author": "Brian Woodward (http://github.com/assemble)",
   "repository": {
     "type": "git",
-    "url": "git://github.com/assemble/grunt-assemble-toc.git"
+    "url": "git://github.com/dselkirk/grunt-assemble-toc.git"
   },
   "bugs": {
-    "url": "https://github.com/assemble/grunt-assemble-toc/issues"
+    "url": "https://github.com/dselkirk/grunt-assemble-toc/issues"
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/assemble/grunt-assemble-toc/blob/master/LICENSE"
+    "url": "https://github.com/dselkirk/grunt-assemble-toc/blob/master/LICENSE"
   },
   "files": [
     "index.js"
